adjusted the contact us form

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <div class="contact-flex">
                     <div class="contact-form">
                         <form
-                            action="
+                            action="#
                     "
                         >
                             <p class="Message">Send us a Message</p>
@@ -249,7 +249,7 @@
                                 name="message"
                                 id="message"
                                 placeholder="enter your message here"
-                                cols="81"
+                                cols="75"
                                 rows="10"
                             ></textarea>
 
