--- a/learn.html
+++ b/learn.html
@@ -47,7 +47,7 @@
                         <a href="#video-lecture" " class="btn btn-lg btn-primary ">
                                 START LEARNING</a
                             >
-                        <a href="index.html " class="btn btn-lg btn-success homepagebtn ">Back to Home page</a>
+                        <a href="index.html " class="btn btn-lg homepagebtn ">Back to Home page</a>
                     </div>
                 </div>
                 <div class="carousel-item " data-bs-interval="1000 ">
@@ -63,7 +63,7 @@
                         <a href="# " class="btn btn-lg btn-primary ">
                                 START LEARNING</a
                             >
-                            <a href="index.html " class="btn btn-lg btn-success homepagebtn ">Back to Home page</a>
+                            <a href="index.html " class="btn btn-lg homepagebtn ">Back to Home page</a>
                         </div>
                     </div>
                     <div class="carousel-item ">
@@ -83,7 +83,7 @@
                             <a href="#" class="btn btn-lg btn-primary">
                                 START LEARNING</a
                             >
-                            <a href="index.html " class="btn btn-lg btn-success homepagebtn ">Back to Home page</a>
+                            <a href="index.html " class="btn btn-lg homepagebtn ">Back to Home page</a>
                     </div>
                 </div>
             </div>
